# oscillatory

./: CLAUDE.md  README.md  manifest.scm  pyproject.toml  pytest.ini
oscillatory/nn/: __init__.py
oscillatory/nn/functional/: __init__.py  diffusion.py  gta.py  kuramoto.py  utils.py
oscillatory/nn/modules/: __init__.py  akorn.py  attention.py  heads.py  kodm.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/performance/: test_benchmarks.py
tests/property/: test_properties.py
tests/unit/functional/: test_diffusion.py  test_gta.py  test_kuramoto.py  test_utils.py
tests/unit/modules/: test_akorn.py  test_attention.py  test_heads.py  test_kodm.py
